changed to using Spring MVC, Spring JPA